Use URI class to parse token address
This keeps the behavior consistent between the saving
validation and the validation done to determine whether
a browser can be open to obtain the token for the currently
entered Play server URL.